@@ -1,12 +1,9 @@
 package usmb.info803.profile_search.paragraphe;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -17,11 +14,15 @@ import static org.mockito.Mockito.when;
 import org.mockito.MockitoAnnotations;
 
 import usmb.info803.profile_search.offre.Offre;
+import usmb.info803.profile_search.offre.OffreService;
 
 class ParagrapheServiceTest {
 
     @Mock
     private ParagrapheRepository paragrapheRepository;
+
+    @Mock
+    private OffreService offreService;
 
     @InjectMocks
     private ParagrapheService paragrapheService;
@@ -33,45 +34,36 @@ class ParagrapheServiceTest {
 
     @Test
     void testGetAllParagraphes() {
-        Offre offre = new Offre();
-        Paragraphe p1 = new Paragraphe("Contenu 1", offre);
-        Paragraphe p2 = new Paragraphe("Contenu 2", offre);
+        Paragraphe paragraphe1 = new Paragraphe("Content 1", new Offre());
+        Paragraphe paragraphe2 = new Paragraphe("Content 2", new Offre());
 
-        when(paragrapheRepository.findAll()).thenReturn(Arrays.asList(p1, p2));
+        when(paragrapheRepository.findAll()).thenReturn(List.of(paragraphe1, paragraphe2));
 
         List<Paragraphe> paragraphes = paragrapheService.getAllParagraphes();
 
         assertEquals(2, paragraphes.size());
-        assertEquals("Contenu 1", paragraphes.get(0).getContenu());
-        assertEquals("Contenu 2", paragraphes.get(1).getContenu());
+        assertEquals("Content 1", paragraphes.get(0).getContenu());
+        assertEquals("Content 2", paragraphes.get(1).getContenu());
     }
 
     @Test
     void testGetParagrapheById() {
-        Offre offre = new Offre();
-        Paragraphe paragraphe = new Paragraphe("Contenu 1", offre);
-
+        Paragraphe paragraphe = new Paragraphe("Content 1", new Offre());
         when(paragrapheRepository.findById(1L)).thenReturn(Optional.of(paragraphe));
 
         Paragraphe result = paragrapheService.getParagrapheById(1L);
 
-        assertNotNull(result);
-        assertEquals("Contenu 1", result.getContenu());
+        assertEquals("Content 1", result.getContenu());
     }
 
     @Test
     void testCreateParagraphe() {
-        Offre offre = new Offre();
-        Paragraphe paragraphe = new Paragraphe("Contenu 1", offre);
-
+        Paragraphe paragraphe = new Paragraphe("Content 1", new Offre());
         when(paragrapheRepository.save(paragraphe)).thenReturn(paragraphe);
 
         Paragraphe result = paragrapheService.createParagraphe(paragraphe);
 
-        assertNotNull(result);
-        assertEquals("Contenu 1", result.getContenu());
-        verify(paragrapheRepository, times(1)).save(paragraphe);
-
+        assertEquals("Content 1", result.getContenu());
     }
 
     @Test
@@ -80,7 +72,7 @@ class ParagrapheServiceTest {
 
         boolean result = paragrapheService.deleteParagraphe(1L);
 
-        assertTrue(result);
+        assertEquals(true, result);
         verify(paragrapheRepository, times(1)).deleteById(1L);
     }
 }
